# beeswax-key-agents

./: .gitignore  .vault-header.txt  AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh  mock-env-commands.txt  skills-lock.json
.github/workflows/: release.yml
crates/vault-api/: Cargo.toml
crates/vault-api/src/: main.rs
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: app.rs  main.rs  scanner.rs  state.rs  ui.rs
crates/vault-cli/src/tests/: generate_mock_env_fixtures_tests.rs  generate_mock_file_fixtures_tests.rs  mod.rs  scanner_tests.rs  state_tests.rs  ui_tests.rs
crates/vault-cli/src/ui/: body.rs  common.rs  footer.rs  header.rs  mod.rs  terminal.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: cache.rs  config.rs  file_utils.rs  lib.rs  matcher.rs  patterns.rs  scan.rs  types.rs
crates/vault-core/src/tests/: matcher_tests.rs  mod.rs  pattern_tests.rs  scanner_tests.rs
crates/vault-core/tests/: patterns.rs
scripts/: clean-all-mock-fixtures.sh  generate-all-mock-fixtures.sh
src/: main.rs
src/models/: scan.rs
src/services/: scanner.rs
