[package]
name = "vault-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.28.1"
directories = "6.0.0"
inquire = "0.9.4"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
vault-core = { path = "../vault-core" }
