[package]
name = "vault-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate-mock-env-fixtures"
path = "src/bin/generate_mock_env_fixtures.rs"

[[bin]]
name = "delete-mock-env-fixtures"
path = "src/bin/delete_mock_env_fixtures.rs"

[[bin]]
name = "generate-mock-file-fixtures"
path = "src/bin/generate_mock_file_fixtures.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.28.1"
directories = "6.0.0"
inquire = "0.9.4"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
vault-core = { path = "../vault-core" }
